SVG changed from text to path to display correctly when font missing, some improvements on small screens.

--- a/sass/layout/_blog-main.scss
+++ b/sass/layout/_blog-main.scss
@@ -46,6 +46,9 @@
     .blog-main-container {
         display: table-header-group;
     }
+    #blog-description {
+        margin-right: 0;
+    }
 }
 
 .blog-side {
