--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -60,3 +60,9 @@
 .gallery-curr-item:visited, .gallery-curr-subitem:visited {
     color: owneon-color( 'accent-strong' );
 }
+
+@media screen and (max-width: 1300px) {
+    #image-container, #galerie-aside {
+        width: 100%;
+    }
+}
